Modified xref goal type controller
